--- a/Latex/protoplanetary disks.tex
+++ b/Latex/protoplanetary disks.tex
@@ -51,19 +51,21 @@ Extrapolated to all optical depths,
 where $T_m$ the disk midplane temperature. The optical depth is defined as $\tau =\frac{1}{2} \kappa \Sigma$, where $\kappa$ is the opacity. We will assume a power-law for the opacity,
 
 \begin{equation}
-\kappa = \kappa_o T^\beta
+\kappa = \kappa_o T^\beta\,.
 \end{equation} 
 
-The tidal heating term is \textbf{($F_{\nu}$ is derived per disk face. Is $F_{tid}$ also per disk face or should we divide by 2?})
+We will use the prescription in Bell \& Lin 2004 for opacity.
+
+The tidal heating term per surface is
 
 \begin{equation}
-F_{tid} = \left(\Omega_b - \Omega\right) \Lambda \Sigma\,,
+F_{tid} = \frac{1}{2}\left(\Omega_b - \Omega\right) \Lambda \Sigma\,,
 \end{equation}
 
 where $\Omega_b = \sqrt{G M/a^3}$ is the binary angular velocity, with $a$ the binary semimajor axis, $\Omega = \sqrt{G M/r^{3}}$ is the Keplerian velocity, $M$ is the total mass of the binary, and $\Lambda$ is the torque due to the binary. At radius $r > h(r) + a$,
 
 \begin{equation}
-\Lambda = f \frac{q^2 GM}{a} \left(\frac{a}{R-a}\right)^4\,,
+\Lambda = f \frac{q^2 GM}{a} \left(\frac{a}{r-a}\right)^4\,,
 \end{equation}
 
 where $q$ is the binary mass fraction and $f$ is a correction factor that fixes the inner disk truncation radius. Note that Martin 2013 fix $f =1$, which places their disk inner edge further out. 
@@ -96,51 +98,13 @@ F_\nu = \frac{3}{8\pi} \frac{F_J \Omega}{r^2} = \frac{9}{8} \Omega^2 \nu \Sigma\
 where the second equality comes from the definition of the angular momentum flux $F_J = 3 \pi \nu \Sigma l$, with $l = \Omega r^2$, the specific angular momentum. (\textit{adjust for dead zone}) The viscosity is expressed as
 
 \begin{equation}
-\nu = \alpha \beta^b \frac{c_s^2}{\Omega}
+\nu = \alpha \frac{c_s^2}{\Omega}
 \end{equation}
 
-where the sound speed is $c_s = \sqrt{\frac{P}{\rho}}$. For a kinematic viscosity proportional to the full pressure, $b = 0$. For a kinematic pressure proportional to only the gas pressure, $b = 1$. The former case, a radiation-pressure dominated disk with $b = 0$, is thermally unstable, and we will consider only the latter case, where viscosity simplifies to
-
+where the sound speed is $c_s = \sqrt{\frac{P}{\rho}}$ and the viscosity is for a gas-pressure dominated disk 
+ 
 \begin{equation}
 v = 	\alpha \frac{k_B T}{\mu \Omega}\,.
-\end{equation}
-
-We can simplify the energy balance equation, Eq.\,\ref{eq:encon}, by solving for the temperature in the limit of various heating processes and then interpolating our results as
-
-\begin{equation}
-T_m^4 = \left(T_{tid,thin}^4 + T_{tid, thick}^4\right)  + \left(T_{\nu,thin}^4 + T_{\nu,thick}^4\right) + T_{irr}^4\,,
-\end{equation}
-
-where, for example, we find $T_{irr}$ by equating $F_{irr} = \sigma T_{irr}^4$. (\textbf{We will check for error for this approximation by solving Eq. 3 exactly for a few timesteps. Also, we can probably perform stability tests on the solution})
-
-In the limit of small optical depth, $\tau \ll 1$, and heating dominated by viscous dissipation, we have
-
-\begin{equation}
-T _{\nu,thin} = \left(\frac{9}{4} \frac{\alpha k_b}{\sigma \mu \kappa_o}\Omega \right)^\frac{1}{3+\beta}\,.
-\end{equation}
-
-In the limit of large optical depth, $\tau \gg 1$, and heating dominated by viscous dissipation, we have
-
-\begin{equation}
-T_{\nu,thick}= \left(\frac{27}{64} \frac{\kappa_o \alpha k_b}{\sigma \mu} \Omega\,\Sigma^2\right)^\frac{1}{3-\beta}\,.
-\end{equation}
-
-In the limit of small optical depth and heating dominated by tidal dissipation, we have
-
-\begin{equation}
-T_{tid,thin} = \left(\frac{2}{\sigma \kappa_o}(\Omega_b - \Omega)\, \Lambda \right)^\frac{1}{4+\beta}\,.
-\end{equation}
-
-In the limit of large optical depth and heating dominated by tidal dissipation, we have
-
-\begin{equation}
-T_{tid,thick} = \left(\frac{1}{\sigma}(\Omega_b - \Omega)\,\Lambda\,\Sigma\right)^\frac{1}{4}\,.
-\end{equation}
-
-For heating dominated by irradiation, we have
-
-\begin{equation}
-T_{irr} = \left(\left(\frac{\eta}{7}\frac{L_c}{4\pi\sigma}\right)^2 \frac{k_b}{\mu G M}\right)^\frac{1}{7} r^{-\frac{3}{7}}\,.
 \end{equation}
 
 \section{Disk Evolution}
@@ -151,15 +115,6 @@ The disk evolution equation is
 
 \begin{equation} \label{eq:diskev}
 \frac{\partial \Sigma}{\partial t} = \frac{1}{r} \frac{\partial}{\partial r} \left[3 r^{1/2} \frac{\partial}{\partial r} \left(r^{1/2} \nu \Sigma\right) - \frac{2 \Lambda \Sigma r^{3/2}}{(G M)^{1/2}}\right]\,.
-\end{equation}
-
-(\textit{the writeup is missing the factor of 2 in front of the external torque term})
-Because we want higher time resolution at smaller times, we define a logarithmic time $\eta = \mathrm{ln}\left(\frac{r}{r_{in}}\right)$, where $r_{in}$ is some arbitrary scale (possibly inner disk edge). This has the advantage of preserving a constant timestep in a finite difference numerical model.
-
-Then, Eq.\,\ref{eq:diskev} becomes 
-
-\begin{equation}
-\frac{\partial \Sigma}{\partial t} = \frac{1}{r_{in}^2 e^{2\eta}} \frac{\partial}{\partial \eta} \left[\frac{3}{(e^\eta)^{1/2}} \frac{\partial}{\partial \eta} \left((e^{\eta})^{1/2} \nu \Sigma\right) - \frac{2 \Lambda \Sigma (r_{in} e^{\eta})^{3/2}}{(G M)^{1/2}}\right]\,.
 \end{equation}
 
 \section{Conservation Equations}
@@ -190,7 +145,7 @@ We can derive a more general inner boundary condition with the hypothesis $\part
 
 The binary torque $\Lambda$ vanishes to 0 at the inner edge. If we further assume that the accretion rate $\dot{M}$ is 0, we get that $\Sigma$ must be a constant, which we can fix to 0 and return our inner boundary condition above.
 
-The initial condition is yet undetermined.
+\textbf{I will add initial surface density and temperature profiles soon. For now, we are using a delta function for the surface density.}
 
 \section{Numerical Method}
 
