opacity updated to piecewise

--- a/Latex/protoplanetary disks.tex
+++ b/Latex/protoplanetary disks.tex
@@ -48,13 +48,7 @@ Extrapolated to all optical depths,
 \sigma T_m^4 = \left(1+\frac{1}{\tau}\right) F_{tid} + \left(\frac{3\tau}{4} + \frac{1}{\tau}\right) F_{v} + F_{irr}\,,
 \end{equation}
 
-where $T_m$ the disk midplane temperature. The optical depth is defined as $\tau =\frac{1}{2} \kappa \Sigma$, where $\kappa$ is the opacity. We will assume a power-law for the opacity,
-
-\begin{equation}
-\kappa = \kappa_o T^\beta\,.
-\end{equation} 
-
-We will use the prescription in Bell \& Lin 2004 for opacity.
+where $T_m$ the disk midplane temperature. The optical depth is defined as $\tau =\frac{1}{2} \kappa \Sigma$, where $\kappa$ is the opacity.
 
 The tidal heating term per surface is
 
@@ -107,6 +101,26 @@ where the sound speed is $c_s = \sqrt{\frac{P}{\rho}}$ and the viscosity is for 
 v = 	\alpha \frac{k_B T}{\mu \Omega}\,.
 \end{equation}
 
+\section{Opacity}
+
+Following the prescription in Bell \& Lin 2004, we will assume a power-law for the opacity,
+
+\begin{equation}
+\kappa = \kappa_o T^\beta\,.
+\end{equation} 
+
+We use a piecewise continuous opacity  for different temperatures,
+
+$$\kappa =
+\begin{cases}
+2\times 10^{-4} T^2, & \textrm{T} \leq 166.81\, \textrm{K} \\
+2\times 10^{16} T^{-7}, & 166.81\, \textrm{K} <  \textrm{T} < 202.677\, \textrm{K} \\
+0.1\times T^{1/2}, & \textrm{T} > 202.677\, \textrm{K}
+\end{cases}
+$$
+
+The last expression for opacity holds up to greater than $2000$\,K, higher than disk temperatures we will consider.
+
 \section{Disk Evolution}
 
 We can now evaluate the disk evolution equation by expressing viscosity as a function of surface density $\Sigma$ and radius $r$.
@@ -145,10 +159,36 @@ We can derive a more general inner boundary condition with the hypothesis $\part
 
 The binary torque $\Lambda$ vanishes to 0 at the inner edge. If we further assume that the accretion rate $\dot{M}$ is 0, we get that $\Sigma$ must be a constant, which we can fix to 0 and return our inner boundary condition above.
 
-\textbf{I will add initial surface density and temperature profiles soon. For now, we are using a delta function for the surface density.}
+\textbf{I will add initial surface density soon. For now, we are using a delta function for the surface density.}
 
 \section{Numerical Method}
 
-We will use FiPy to solve Eq.\,\ref{eq:diskev}. The package supports partial differential equations with a nonlinear diffusion term and an advection term.
+We will use FiPy to solve Eq.\,\ref{eq:diskev}. FiPy is a finite volume package for Python, it's typically used to
+solve PDEs that arise from conservation laws in physical sciences and engineering.
 
+Since FiPy only works with conservation equations, we have to cast our evolution equation as a conservation law.
+By inspecting equation \ref{eq:diskev} we can see that it can be written as a conservation law with a convection 
+term as follows
+\begin{equation} \label{eq:conservation}
+\frac{\partial \Sigma}{\partial t} = -\frac{1}{r} \frac{\partial}{\partial r} \left( r \Sigma v_{r}\right)=-\nabla\cdot (\Sigma v_r \bold{e}_{r}),
+\end{equation}
+where
+\begin{equation} \label{eq:vr}
+v_r = -\frac{3}{r^{1/2}\Sigma} \frac{\partial}{\partial r} \left(r^{1/2} \nu \Sigma\right) + \frac{2 \Lambda r^{1/2}}{(G M)^{1/2}}.
+\end{equation}
+This way we have a conservation law. The conserved quantity is $\Sigma$, and the flux is $\Sigma v_r \bold{e}_r$.
+
+The finite volume techinque consists on dividing the volume into small cells where the variable of interest ($\Sigma$) has a constant value,
+and the value of the flux ($\Sigma v_r$) has a constant value at the cells' faces. The geometry of the cells doesn't have to be cartesian, in
+our case we'll use cells shaped like annuli to take advantage of the cylindrical symmetry.
+The discretization is obtained by integrating equation \ref{eq:conservation} over a volume cell and using the divergence theorem on the
+right hand side to get
+\begin{equation} \label{eq:discretization}
+\frac{\Sigma_c(t+\Delta t) V_C - \Sigma_c(t) V_C}{\Delta t} =
+-\sum_{f} \Sigma_{f}(t) v_{rf}(t) A_{f} (\bold{e}_r \cdot \bold{e}_{f}),
+\end{equation}
+where the subscript $c$ means that quantity is evaluated at the cell center and $f$ means the quantity is evaluated at one of the faces,
+$V_C$ is the cell's volume, $A_f$ is the area of face $f$, and $\bold{e}_{f}$ is the normal vector of the face $f$ pointing outwards.
+In our case we only have two faces per cell because the grid is one 
+dimensional.
 \end{document}
